syntax = "proto3";

option csharp_namespace = "GrpcService";

// Request lấy user theo id
message GetUserByIdRequest {
  string id = 1;
}

// Response chứa thông tin user
message UserReply {
  string id = 1;
  string displayName = 2;
  string avatarUrl = 3;
}

// Service định nghĩa các API gRPC
service UserGrpcService {
  rpc GetUserById (GetUserByIdRequest) returns (UserReply);
}